dont be so serious

--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -3,6 +3,11 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href="main.css" />
+    <!— https://cdnjs.com/libraries/sockjs-client —>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/so.."></script>
+    <!— https://cdnjs.com/libraries/stomp.js/ —>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.m.."></script>
+
 </head>
 <body>
 <div id="login-container">
