--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Login</title>
+
     <link rel="stylesheet" href="main.css" />
-    <!— https://cdnjs.com/libraries/sockjs-client —>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/so.."></script>
-    <!— https://cdnjs.com/libraries/stomp.js/ —>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.m.."></script>
+    <!-- https://cdnjs.com/libraries/sockjs-client -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
+    <!-- https://cdnjs.com/libraries/stomp.js/ -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
 </head>
 <body>
@@ -31,7 +32,7 @@
 
         function onConnected() {
             alert('try connect');
-            // Subscribe to the Public Topic
+            alert('Subscribe to the Public Topic');
             stompClient.subscribe('/topic/publicChatRoom', onMessageReceived);
 
             // Tell your login to the server
@@ -43,7 +44,7 @@
         }
 
         function onError(error) {
-            alert('Could not connect to WebSocket server. Please refresh this page to try again!');
+            alert('Could not connect to WebSocket server!');
         }
 
         function sendMessage(event) {
